namespace OrdrMate.DTOs.User;

public class FirebaseTokenDto
{
    public required string Token { get; set; }
    public required string UserId { get; set; }
}