namespace OrdrMate.Enums;

public enum OrderStatus
{
    Pending = 0,
    Queued = 1,
    Ready = 3,
    Delivered = 4,
    Cancelled = -1
}