namespace OrdrMate.Enums;

public enum OrderType
{
    Takeaway = 1,
}