namespace OrdrMate.Enums;

public enum ReservationStatus
{
    Queued = 0,
    Seated = 1,
}